k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erp-backend-app
  namespace: erp-ns
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: erp-backend-app
  template:
    metadata:
      labels:
        app: erp-backend-app
    spec:
      containers:
      - name: backend-app
        image: cloudwithrk/erp-backend-app:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10

      restartPolicy: Always
