k8s/fronted.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erp-frontend-app
  namespace: erp-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: erp-frontend-app
  template:
    metadata:
      labels:
        app: erp-frontend-app
    spec:
      containers:
      - name: frontend-app
        image: cloudwithrk/erp-frontend-app:v1
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-config
            mountPath: /tmp/default.conf.template   # temporary location
            subPath: default.conf.template
        command: ["/bin/sh", "-c"]
        args:
          - envsubst '$BACKEND_HOST' < /tmp/default.conf.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'
        livenessProbe:
          httpGet:
            path: /apps
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /apps
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
      volumes:
        - name: nginx-config
          configMap:
            name: frontend-nginx-config
      restartPolicy: Always
