k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-svc
  namespace: erp-ns
spec:
  selector:
    app: erp-backend-app
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30500
    protocol: TCP
