k8s/fronted-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-svc
  namespace: erp-ns
spec:
  selector:
    app: erp-frontend-app
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP 
    nodePort: 30080
