k8s/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: erp-ing 
  namespace: erp-ns 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/canary: "true"
    # nginx.ingress.kubernetes.io/canary-by-header: "Canary"   # optional header-based routing
    # nginx.ingress.kubernetes.io/canary-weight: "10" 

spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local #erp.hicloud.co.in 
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: frontend-app-svc
            port:
              number: 80
      - path: /api 
        pathType: Prefix
        backend:
          service:
            name: backend-app-svc
            port:
              number: 5000
